# testpass

./: .gitignore  .ycm_extra_conf.py  AUTHORS  COPYRIGHT  Makefile  Makefile.am  README  README.md  bootstrap.sh  config.h.in  configure.ac  example_step_ideas.xml  notes.txt  test_app_notes.txt
docs/: README  notes.txt
src/: Makefile.am  StepList.h  Steps.cpp  Steps.h  TestException.h  TestStep.cpp  TestStep.h  attribute.h  attributes.h  main.cpp  operation.h  utils.cpp  utils.h
src/test/: TestAttributes.cpp  TestMain.cpp  TestOperations.cpp  TestStep.cpp  TestStepList.cpp  TestSteps.cpp
steps/: setDarkConfigOne  setDarkConfigThree  setDarkConfigTwo  setPrerequisite  setVariantOne  setVariantTwo  turnOnLights  turnOutLights
steps/compound/: testDarkConfigInLight  testVariant
steps/simple/: basicTest  basicTest2
